examples/test/testpolicy1964.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1964
  namespace: namespace484
spec:
  podSelector:
    matchLabels:
      key23: value39
      key24: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value47
          key8: value3
          key16: value3
      podSelector:
        matchLabels:
          key32: value12
          key19: value17
